ログイン処理

--- a/SHABERIBA/templates/signup-test.html
+++ b/SHABERIBA/templates/signup-test.html
@@ -6,6 +6,13 @@
   <title>Document</title>
 </head>
 <body>
+  {% with messages = get_flashed_messages() %} {% if messages %}
+          <ul class="flashes">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %} {% endwith %}
   <form class="auth-form signup" method="post">
     <h1 class="auth-title">HI THERE!</h1>
     <div>
