ログイン処理修正

--- a/SHABERIBA/templates/auth/login.html
+++ b/SHABERIBA/templates/auth/login.html
@@ -14,7 +14,7 @@
                     <input class="form-block"
                         type="text"
                         id=""
-                        name=""
+                        name="email"
                         >
                 </div>
             </div>
@@ -22,14 +22,14 @@
                 <div for="" class="form-text">パスワード</div>
                 <div class="form">
                     <input class="form-block"
-                        type="text"
+                        type="password"
                         id=""
-                        name=""
+                        name="password"
                         >
                 </div>
             </div>
             
-            <button taype="submit" class="button-block">
+            <button type="submit" class="button-block">
                ログイン
             </button>
             <div class="other-things"> 
