--- a/SHABERIBA/templates/auth/signup.html
+++ b/SHABERIBA/templates/auth/signup.html
@@ -48,7 +48,7 @@
                         >
                 </div>
             </div>
-            <button taype="submit" class="button-block">
+            <button type="submit" class="button-block">
                 サインアップ
             </button>
         </div>
