--- a/SHABERIBA/static/css/auth.css
+++ b/SHABERIBA/static/css/auth.css
@@ -102,4 +102,14 @@ h1{
 
 .signup-button-text{
     color: #2d7fb6;
+    cursor: pointer;
 }
+
+.flashes {
+    margin: 0;
+    padding-inline-start: 0;
+    text-align: center;
+    font-size: 15px;
+    color: rgb(198, 8, 8);
+  }
+  
