--- a/SHABERIBA/templates/auth/signup.html
+++ b/SHABERIBA/templates/auth/signup.html
@@ -54,4 +54,11 @@
         </div>
     </form>
 </div>
+{% with messages = get_flashed_messages() %} {% if messages %}
+          <ul class="flashes">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %} {% endwith %}
 {% endblock %}
