--- a/SHABERIBA/templates/channels.html
+++ b/SHABERIBA/templates/channels.html
@@ -3,14 +3,7 @@
 {% endblock %}{% block header %}
 <div class="header-menu">
     <div>チャンネル一覧</div>
-    <div id="logoutModalOpen">ログアウト</div> 
-    <div id="logoutModal" class="modal">
-        <div class="modal-content">
-            <p>ログアウトしてもよろしいですか？</p>
-            <button id="confirmLogoutBtn">ログアウト</button>
-            <button id="cancelLogoutBtn">キャンセル</button>
-        </div>
-    </div>      
+    {% include 'logout-modal.html' %}      
 </div>
 {% endblock %}{% block body %}
 <main>
@@ -37,10 +30,10 @@
     {% for channel in channels %}
         <div class="channel-title-box" data-channel-id="{{channel.id}}">
             <div class="channel-box">
-                <img src="../static/img/saberiba.png" class="channel-img">
-                <div class="channel-title">
+                <img src="{{ url_for('static', filename='img/smile-reatekun (2).png') }}" class="channel-img">
+                <a href="{{ url_for('detail', cid=channel.id) }}" class="channel-title">
                     {{ channel.name }}
-                </div>
+                </a>
                 <div class="icon-set">
                     {% if channel.uid == uid %}  <!--id名は後で確認！-->
                         <button type="button">
