cancelボタン押された時の修正その2

--- a/SHABERIBA/templates/channels.html
+++ b/SHABERIBA/templates/channels.html
@@ -47,8 +47,8 @@
                         <div class="modal-content">
                             <form id="deleteForm" method="POST">
                                 <p>このチャンネルを削除してもよろしいですか？</p>
-                                <button id="confirmDeleteBtn">削除</button>
-                                <button id="cancelDeleteBtn">キャンセル</button>
+                                <button type="submit" id="confirmDeleteBtn">削除</button>
+                                <button type="button" id="cancelDeleteBtn">キャンセル</button>
                             </form>
                         </div>
                     </div>
