--- a/SHABERIBA/static/css/auth.css
+++ b/SHABERIBA/static/css/auth.css
@@ -56,7 +56,6 @@ h1{
 
 .forms{
     width: 700px;
-    margin-bottom: 15px;
 }
 
 .form-text{
@@ -86,7 +85,7 @@ h1{
 .other-things{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: right;
 }
 
 .button-block{
@@ -106,10 +105,9 @@ h1{
 }
 
 .flashes {
-    margin: 0;
-    padding-inline-start: 0;
+
     text-align: center;
     font-size: 15px;
     color: rgb(198, 8, 8);
-  }
-  
+}
+
