カテゴリ名を変更

--- a/SHABERIBA/templates/channels.html
+++ b/SHABERIBA/templates/channels.html
@@ -20,10 +20,10 @@
                         <div class="category-select">
                             <label for="category">カテゴリー選択</label>
                             <select id="channelCategory" name="channelCategory">
-                                <option value="category1">happy</option>
-                                <option value="category2">sad</option>
-                                <option value="category3">question</option>
-                                <option value="category4">secret</option>
+                                <option value="category1">サブカル</option>
+                                <option value="category2">IT技術トーク</option>
+                                <option value="category3">お悩み相談</option>
+                                <option value="category4">雑談</option>
                             </select>
                         </div>
                     </div>
