--- a/SHABERIBA/static/css/styles.css
+++ b/SHABERIBA/static/css/styles.css
@@ -38,9 +38,28 @@ body {
 }
 
 .main {
-    flex: 1;
-    overflow-y: auto;
     padding-bottom: 220px;
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  align-items: center;
+}
+
+#pagenation {
+  list-style: none;
+  display: flex;
+  font-size: 20px;
+  gap: 40px;
+  justify-content: center;
+  cursor: pointer;
+  padding: 0;
+}
+
+#backbtn, #nextbtn {
+  cursor: pointer;
 }
 
 .create-channel {
@@ -48,8 +67,7 @@ body {
     justify-content: center;
     font-size: 24px;
     margin-top: 15px;
-    align-items: center;
-    padding: 15px;  
+    align-items: center;  
 }
 
 .add-img {
@@ -69,14 +87,21 @@ body {
     align-items: center;
 }
 
+.channel-summary {
+    grid-column: 2;
+    font-size: 20px;
+}
+
 .channel-box {
+    grid-column: 1;
     display: grid;
     grid-template-columns: 70px 1fr 1fr;
     align-items: center;
-    grid-column: 1;
     justify-content: space-between;
     column-gap: 50px;
 }
+
+
 
 .channel-img {
     margin: 15px;
@@ -110,10 +135,7 @@ body {
     cursor: pointer;
 }
 
-.channel-summary {
-    grid-column: 2;
-    font-size: 20px;
-}
+
 
 @media (max-width: 768px) {
   .header-menu {
